# haskell-tetris

./: .gitignore  CONTRIBUTING.md  PLAN.md  README.md  haskell-tetris.cabal
app/: Main.hs
docs/plans/: 2026-01-19-main-menu-design.md
src/Tetris/: Input.hs  Logic.hs  Pieces.hs  Render.hs  Types.hs
test/: LogicSpec.hs  Spec.hs
